--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: vece
+Package: waketor
 Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9000
 Authors@R: 
@@ -13,3 +13,14 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Imports: 
+    assertive.base,
+    assertive.properties,
+    assertive.types,
+    assertthat,
+    dplyr,
+    MASS,
+    stats,
+    tibble,
+    utils,
+    vctrs
