--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R:
            email = "s.rajborirug@gmail.com",
            comment = c(ORCID = "0000-0002-5000-7409"))
 Description: What the package does (one paragraph).
-License: MIT + file LICENSE
+License: CC BY 4.0
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
